<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_deng_lu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dl3"
        android:textColor="@color/text_02"
        app:layout_marginTopPercent="35.51%w"
        app:layout_textSizePercent="4.8%w" />

    <ImageView
        android:id="@+id/iv_wechat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/dd_dlwx"
        app:layout_heightPercent="12.08%w"
        app:layout_marginLeftPercent="10.39%w"
        app:layout_marginRightPercent="10.39%w"
        app:layout_marginTopPercent="10.39%w" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dl3_qt"
        android:textColor="@color/gray_text"
        app:layout_marginTopPercent="28.74%w"
        app:layout_textSizePercent="3.38%w" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_marginTopPercent="7.72%w">

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@mipmap/phone"
                app:layout_heightPercent="38.4%w"
                app:layout_widthPercent="38.4%w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sjhdl"
                app:layout_marginTopPercent="8.69%w"
                app:layout_textSizePercent="10.14%w" />
        </com.zhy.android.percent.support.PercentLinearLayout>
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@mipmap/qq"
                app:layout_heightPercent="38.4%w"
                app:layout_widthPercent="38.4%w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qq"
                app:layout_marginTopPercent="8.69%w"
                app:layout_textSizePercent="10.14%w" />
        </com.zhy.android.percent.support.PercentLinearLayout>
        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@mipmap/sina"
                app:layout_heightPercent="38.4%w"
                app:layout_widthPercent="38.4%w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sina"
                app:layout_marginTopPercent="8.69%w"
                app:layout_textSizePercent="10.14%w" />
        </com.zhy.android.percent.support.PercentLinearLayout>
    </LinearLayout>


</com.zhy.android.percent.support.PercentLinearLayout>