<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="10.3%w"
        app:layout_paddingLeftPercent="3.38%w"
        app:layout_paddingRightPercent="3.38%w">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@mipmap/kt_huoban"
            app:layout_heightPercent="3.86%w"
            app:layout_marginTopPercent="3.14%w"
            app:layout_widthPercent="3.86%w" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView1"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/pt_cy"
            android:textColor="@color/text_12"
            app:layout_marginLeftPercent="2.17%w"
            app:layout_textSizePercent="3.38%w" />

        <TextView
            android:id="@+id/tv_endtips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/pt_end"
            android:textColor="@color/text_01"
            android:visibility="gone"
            app:layout_textSizePercent="2.9%w" />

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kt_btjy"
                android:textSize="12sp"

                />

            <TextView
                android:id="@+id/tv_hh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:background="@drawable/red_radius_2dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/kt_fenhao"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_mm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:background="@drawable/red_radius_2dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:text="@string/kt_fenhao"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_ss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:background="@drawable/red_radius_2dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kt_js"
                android:textSize="12sp"

                />
        </LinearLayout>


    </com.zhy.android.percent.support.PercentRelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/imageView1"
        android:background="@color/line_01" />

    <com.andbase.library.view.sample.AbSampleListView
        android:id="@+id/lv_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_paddingLeftPercent="4.59%w"
        app:layout_paddingRightPercent="4.59%w" />

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_glistbottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shape_corner_dl"
        android:visibility="gone"
        app:layout_heightPercent="12.56%w"
        app:layout_marginLeftPercent="4.59%w"
        app:layout_marginRightPercent="4.59%w">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/kt_wenhao"
            app:layout_heightPercent="9.9%w"
            app:layout_marginLeftPercent="5.88%w"
            app:layout_widthPercent="9.9%w" />

        <TextView
            android:id="@+id/tv_btm_pmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView2"
            android:textColor="@color/text_01"
            app:layout_marginLeftPercent="5.88%w"
            app:layout_textSizePercent="3.74%w" />

    </com.zhy.android.percent.support.PercentRelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="4.11%w" />
</com.zhy.android.percent.support.PercentLinearLayout>